# lambda-gp

./: Makefile  README.md  dune-project
doc/: lambda_calculus_example.ml  walk.txt
examples/: .merlin  bool_and.ml  bool_not.ml  bool_or.ml  dune  f_identity.ml  identity.ml  nat_fact.ml  nat_mul.ml  nat_mul2.ml  nat_mul3.ml  nat_pred.ml  nat_succ.ml  nat_sum.ml  pair.ml  pair_selector.ml
experiments/: l.ml  lst.ml  lst_unit.ml
src/: .merlin  bool.ml  bool.mli  church.ml  church.mli  dune  genetic.ml  genetic.mli  helpers.ml  helpers.mli  lambda.ml  lambda.mli  lambda_church.ml  lambda_church.mli  lambda_gp.ml  lambda_rand.ml  lambda_rand.mli  rand_term.ml  rand_term.mli
test/: .merlin  dune  lambda_test.ml  test.ml
